Access with a mobile device is now Working. SignUp with mobile device is now Working. Added Category.java, Statement.java, Wallet.java

--- a/src/main/resources/static/homepage.html
+++ b/src/main/resources/static/homepage.html
@@ -43,20 +43,23 @@
                      </li> 
                      <li class='nav-item dropdown'>   
                         <a class='nav-link dropdown-toggle' href='#' id='navbarDropdown' role='button' data-bs-toggle='dropdown' aria-expanded='false'>   
-                              Prodotti 
+                              Operazioni 
                         </a>   
                         <ul class='dropdown-menu dropdown-menu-lg-end' aria-labelledby='navbarDropdown'>   
-                               <li><a class='dropdown-item' aria-current='page' href='prodotti.html'>Lista Prodotti</a></li>
-                            <li><a class='dropdown-item' aria-current='page' href='categorie.html'>Lista Categorie</a></li>
+                               <li><a class='dropdown-item' aria-current='page' href='#'>Aggiungi Statement</a></li>
+                            <li><a class='dropdown-item' aria-current='page' href='#'>Aggiungi Portafoglio</a></li>
                         </ul> 
                      </li>   
                      <li class='nav-item dropdown'>   
                        <a class='nav-link dropdown-toggle' href='#' id='navbarDropdown' role='button' data-bs-toggle='dropdown' aria-expanded='false'>   
-                             Opzioni Prodotti   
+                             Opzioni Conti   
                        </a>   
                        <ul class='dropdown-menu dropdown-menu-lg-end' aria-labelledby='navbarDropdown'>   
-                            <li><a class='dropdown-item' href='prodotti_add.html'>Aggiungi Prodotti</a></li>   
-                            <li><a class='dropdown-item' href='categorie_add.html'>Aggiungi Categorie</a></li>  
+                            <li><a class='dropdown-item' href='#'>Storico Annuale</a></li>   
+                            <li><a class='dropdown-item' href='#'>Storico Totale</a></li>
+                            <li><a class='dropdown-item' href='#'>Grafico Annuale</a></li>
+                            <li><a class='dropdown-item' href='#'>Portafogli disponibili</a></li> 
+                            <li><a class='dropdown-item' href='#'>Categorie disponibili</a></li> 
                         </ul>   
                     </li> 
                     <li class='nav-item dropdown'>   
