--- a/src/main/resources/static/homepage.html
+++ b/src/main/resources/static/homepage.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/homepage.css">
+    <script src="./js/jquery-3.6.0.min.js"></script>
+    <script src="./js/wallet.js"></script>
     <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" />
   <!-- Google Fonts Roboto -->
@@ -46,8 +48,8 @@
                               Operazioni 
                         </a>   
                         <ul class='dropdown-menu dropdown-menu-lg-end' aria-labelledby='navbarDropdown'>   
-                               <li><a class='dropdown-item' aria-current='page' href='#'>Aggiungi Statement</a></li>
-                            <li><a class='dropdown-item' aria-current='page' href='#'>Aggiungi Portafoglio</a></li>
+                               <li><a class='dropdown-item disabled' aria-current='page' href='#'>Aggiungi Statement</a></li>
+                            <li><a class='dropdown-item disabled' aria-current='page' href='#'>Aggiungi Portafoglio</a></li>
                         </ul> 
                      </li>   
                      <li class='nav-item dropdown'>   
@@ -55,11 +57,11 @@
                              Opzioni Conti   
                        </a>   
                        <ul class='dropdown-menu dropdown-menu-lg-end' aria-labelledby='navbarDropdown'>   
-                            <li><a class='dropdown-item' href='#'>Storico Annuale</a></li>   
-                            <li><a class='dropdown-item' href='#'>Storico Totale</a></li>
-                            <li><a class='dropdown-item' href='#'>Grafico Annuale</a></li>
-                            <li><a class='dropdown-item' href='#'>Portafogli disponibili</a></li> 
-                            <li><a class='dropdown-item' href='#'>Categorie disponibili</a></li> 
+                            <li><a class='dropdown-item disabled' href='#'>Storico Annuale</a></li>   
+                            <li><a class='dropdown-item disabled' href='#'>Storico Totale</a></li>
+                            <li><a class='dropdown-item disabled' href='#'>Grafico Annuale</a></li>
+                            <li><a class='dropdown-item' data-bs-toggle="modal" data-bs-target="#wallet">Portafogli disponibili</a></li> 
+                            <li><a class='dropdown-item disabled' href='#'>Categorie disponibili</a></li> 
                         </ul>   
                     </li> 
                     <li class='nav-item dropdown'>   
@@ -67,8 +69,8 @@
                               Opzioni   
                         </a>   
                         <ul class='dropdown-menu dropdown-menu-lg-end' aria-labelledby='navbarDropdown'> 
-                            <li><a class='dropdown-item' href='#'>Gestione Account</a></li>    
-                             <li><a class='dropdown-item' href='#'>Changelog</a></li>   
+                            <li><a class='dropdown-item disabled' href='#'>Gestione Account</a></li>    
+                             <li><a class='dropdown-item disabled' href='#'>Changelog</a></li>   
                              <li><a class='dropdown-item' href='/logout'>Logout</a></li>  
                          </ul>   
                      </li> 
@@ -299,6 +301,36 @@
         <!-- MDB -->
         <script type="text/javascript" src="js/mdb.min.js"></script>
         <!-- Custom scripts -->
-        <script type="text/javascript" src="js/admin.js"></script>
+        <script type="text/javascript" src="js/homepage.js"></script>
+
+        <!-- MODAL PORTAFOGLI DISPONIBILI -->
+        <div class="modal fade" id="wallet" tabindex="-1" aria-labelledby="walletModal" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content opacity" style="border-radius: 20px;">
+              <div class="modal-header">
+                      <img src="./logos/favicon_trasparent.png" alt="block" style="width: 50px; border-radius: 100px; padding-right: 10px;">
+                  <h5 class="modal-title" id="walletModal">MoneyStats Wallet</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <form action="/login" method="post">
+              <div class="modal-body">
+                <table class="table table-striped table-hover">
+                  <thead>
+                    <tr>
+                      <th scope="col">Nome Portafoglio</th>
+                      <th scope="col">Opzioni</th>
+                    </tr>
+                  </thead>
+                  <tbody id="listWallet"></tbody>
+                </table>
+              </div>
+              <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary roundedCorner" data-bs-dismiss="modal" style="height: 45px; width: 100px;">Chiudi</button>
+                  <button type="submit" class='btn btn btn-outline-success float-end roundedCorner' style="padding-left: 15px; padding-right: 15px; height: 45px; width: 100px;">Accedi</button>
+              </div>
+          </div>
+      </div>
+      </form>
+  </div>
     </body>
     </html>
