--- a/src/main/resources/static/homepage.html
+++ b/src/main/resources/static/homepage.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/homepage.css">
     <script src="./js/jquery-3.6.0.min.js"></script>
     <script src="./js/wallet.js"></script>
+    <script src="./js/category.js"></script>
     <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" />
   <!-- Google Fonts Roboto -->
@@ -61,7 +62,7 @@
                             <li><a class='dropdown-item disabled' href='#'>Storico Totale</a></li>
                             <li><a class='dropdown-item disabled' href='#'>Grafico Annuale</a></li>
                             <li><a class='dropdown-item' data-bs-toggle="modal" data-bs-target="#wallet">Portafogli disponibili</a></li> 
-                            <li><a class='dropdown-item disabled' href='#'>Categorie disponibili</a></li> 
+                            <li><a class='dropdown-item' data-bs-toggle="modal" data-bs-target="#category">Categorie disponibili</a></li> 
                         </ul>   
                     </li> 
                     <li class='nav-item dropdown'>   
@@ -70,7 +71,7 @@
                         </a>   
                         <ul class='dropdown-menu dropdown-menu-lg-end' aria-labelledby='navbarDropdown'> 
                             <li><a class='dropdown-item disabled' href='#'>Gestione Account</a></li>    
-                             <li><a class='dropdown-item disabled' href='#'>Changelog</a></li>   
+                             <li><a class='dropdown-item' href='changelog.html'>Changelog</a></li>   
                              <li><a class='dropdown-item' href='/logout'>Logout</a></li>  
                          </ul>   
                      </li> 
@@ -318,6 +319,7 @@
                   <thead>
                     <tr>
                       <th scope="col">Nome Portafoglio</th>
+                      <th scope="col">Categoria</th>
                       <th scope="col">Opzioni</th>
                     </tr>
                   </thead>
@@ -326,11 +328,36 @@
               </div>
               <div class="modal-footer">
                   <button type="button" class="btn btn-secondary roundedCorner" data-bs-dismiss="modal" style="height: 45px; width: 100px;">Chiudi</button>
-                  <button type="submit" class='btn btn btn-outline-success float-end roundedCorner' style="padding-left: 15px; padding-right: 15px; height: 45px; width: 100px;">Accedi</button>
               </div>
           </div>
       </div>
-      </form>
   </div>
+  <!-- MODAL CATEGORIE DISPONIBILI -->
+  <div class="modal fade" id="category" tabindex="-1" aria-labelledby="categoryModal" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content opacity" style="border-radius: 20px;">
+        <div class="modal-header">
+                <img src="./logos/favicon_trasparent.png" alt="block" style="width: 50px; border-radius: 100px; padding-right: 10px;">
+            <h5 class="modal-title" id="categoryModal">MoneyStats Categorie</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <form action="/login" method="post">
+        <div class="modal-body">
+          <table class="table table-striped table-hover">
+            <thead>
+              <tr>
+                <th scope="col">Nome Categoria</th>
+                <th scope="col">Opzioni</th>
+              </tr>
+            </thead>
+            <tbody id="listCategory"></tbody>
+          </table>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-secondary roundedCorner" data-bs-dismiss="modal" style="height: 45px; width: 100px;">Chiudi</button>
+        </div>
+    </div>
+</div>
+</div>
     </body>
     </html>
