--- a/src/main/resources/static/homepage.html
+++ b/src/main/resources/static/homepage.html
@@ -9,6 +9,7 @@
     <script src="./js/jquery-3.6.0.min.js"></script>
     <script src="./js/wallet.js"></script>
     <script src="./js/category.js"></script>
+    <script src="./js/statement.js"></script>
     <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" />
   <!-- Google Fonts Roboto -->
@@ -30,7 +31,7 @@
    <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6' crossorigin='anonymous'>
    <!-- JavaScript Bundle with Popper -->
    <script src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js' integrity='sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf' crossorigin='anonymous'></script>
-    <title>Login - SignUp MoneyStats</title>
+    <title>MoneyStats - Homepage</title>
 </head>
 <body class="loginpage">
     <nav class='navbar navbar-expand-lg navbar-dark colorLogo fixed-top'>   
@@ -49,15 +50,16 @@
                               Operazioni 
                         </a>   
                         <ul class='dropdown-menu dropdown-menu-lg-end' aria-labelledby='navbarDropdown'>   
-                               <li><a class='dropdown-item disabled' aria-current='page' href='#'>Aggiungi Statement</a></li>
-                            <li><a class='dropdown-item disabled' aria-current='page' href='#'>Aggiungi Portafoglio</a></li>
+                               <li><a class='dropdown-item' aria-current='page' href='statement.html'>Aggiungi Statement</a></li>
+                            <li><a class='dropdown-item' aria-current='page' data-bs-toggle="modal" data-bs-target="#addWallet">Aggiungi Portafoglio</a></li>
                         </ul> 
                      </li>   
                      <li class='nav-item dropdown'>   
                        <a class='nav-link dropdown-toggle' href='#' id='navbarDropdown' role='button' data-bs-toggle='dropdown' aria-expanded='false'>   
                              Opzioni Conti   
                        </a>   
-                       <ul class='dropdown-menu dropdown-menu-lg-end' aria-labelledby='navbarDropdown'>   
+                       <ul class='dropdown-menu dropdown-menu-lg-end' aria-labelledby='navbarDropdown'>  
+                            <li><a class='dropdown-item' data-bs-toggle="modal" data-bs-target="#dataWallet">Capitale nei Wallet</a></li> 
                             <li><a class='dropdown-item disabled' href='#'>Storico Annuale</a></li>   
                             <li><a class='dropdown-item disabled' href='#'>Storico Totale</a></li>
                             <li><a class='dropdown-item disabled' href='#'>Grafico Annuale</a></li>
@@ -359,5 +361,57 @@
     </div>
 </div>
 </div>
+      <!-- MODAL AGGIUNGI PORTAFOGLIO -->
+      <div class="modal fade" id="addWallet" tabindex="-1" aria-labelledby="walletModalAdd" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content opacity" style="border-radius: 20px;">
+              <div class="modal-header">
+                      <img src="./logos/favicon_trasparent.png" alt="block" style="width: 50px; border-radius: 100px; padding-right: 10px;">
+                  <h5 class="modal-title" id="walletModalAdd">MoneyStats Aggiungi Portafoglio</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <form action="/login" method="post">
+              <div class="modal-body">
+                <div class='mb-3'>  
+                  <div class='form-floating mb-3'> 
+                      <input type='text' id="name" name='name' class='form-control roundedCorner mx-auto' placeholder="Inserire Nome Portafoglio..." required>
+                      <label for='name'>Inserire Nome Portafoglio</label>
+                  </div>
+              </div> 
+              <div class="mb-3">
+                  <select class="form-select roundedCorner" id="catOptionhtml" aria-label="Default select example">
+                    </select>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary roundedCorner" data-bs-dismiss="modal" style="height: 45px; width: 100px;">Chiudi</button>
+              <button type="button" class="btn btn-outline-success roundedCorner" style="height: 45px; width: 120px;" id="aggiungiWallet">Conferma</button>  
+              </div>
+          </div>
+        </div>
+      </div>
+            <!-- MODAL SELEZIONE DATA PORTAFOGLIO -->
+            <div class="modal fade" id="dataWallet" tabindex="-1" aria-labelledby="dataWalletModal" aria-hidden="true">
+              <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content opacity" style="border-radius: 20px;">
+                    <div class="modal-header">
+                            <img src="./logos/favicon_trasparent.png" alt="block" style="width: 50px; border-radius: 100px; padding-right: 10px;">
+                        <h5 class="modal-title" id="dataWalletModal">MoneyStats Data</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <form action="/login" method="post">
+                    <div class="modal-body">
+                    <div class="mb-3">
+                        <select class="form-select roundedCorner" id="dateOption" aria-label="Default select example">
+                          </select>
+                    </div>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary roundedCorner" data-bs-dismiss="modal" style="height: 45px; width: 100px;">Chiudi</button>
+                    <button type="button" class="btn btn-outline-success roundedCorner" style="height: 45px; width: 120px;" id="dataConfirm">Prosegui</button>  
+                    </div>
+                </div>
+              </div>
+            </div>
     </body>
     </html>
