--- a/src/main/resources/static/changelog.html
+++ b/src/main/resources/static/changelog.html
@@ -56,70 +56,49 @@
                                   <figure class="hover-rotate mx-auto"> 
                                   <img src='./logos/linkedin_banner_image_1.png' alt='autori' style='width: 200px; border-radius: 100px;'>
                                   </figure>
-                                  <p class='fs-2 text-dark fw-bolder'>MoneyStats V0.20 Alpha 2</p>
+                                  <p class='fs-2 text-dark fw-bolder'>MoneyStats V0.30 Alpha 3</p>
                                   <p class='fs-1 text-dark'>ChangeLog</p>
                                   </div> 
                                   <div class="accordion" id="accordionExample">
                                     <div class="accordion-item">
                                       <h2 class="accordion-header" id="headingOne">
                                         <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                          14-05-2021 - NotEatYet V1.00 Beta 1 
+                                          05-06-2021 - NotEatYet V1.00 Beta 1 
                                         </button>
                                       </h2>
                                       <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                                         <div class="accordion-body">
                                           <strong class="text-dark fs-3">BackEnd</strong><br>
-                                          <strong>Edoardo Carollo</strong><br>
-                                          - 
-                                          <br>
-                                          <strong>Domenico Tuttolomondo</strong><br>
-                                          - 
+                                          - Aggiunto Controller Statement, ed implementato metodo personalizzato per la data e metodo di aggiunta Statement, per ora solo separato, ricordarsi di inserire piu in avanti un opzione Note. <br>
+                                          - Aggiunti nuovi metodi nella sezione category e wallet, tra cui l'aggiunta del wallet, ricordarsi di inserire Note. <br>
+                                          
                                           <hr>
                                           <strong class="text-dark fs-3">FrontEnd</strong><br>
                                           <strong>Giovanni Lamarmora</strong><br>
-                                          - Implementazione del menu nel dettaglio del ristoratore. <br>
-                                          - Divisione dei file JS per ogni pagina HTML. <br>
-                                          - Modale Modifica e dettaglio implementato nei Piatti. <br>
-                                          - Fix Bug: Tutti i dettagli possono essere svuotati al close. <br>
-                                          - App funzionante correttamente. <br>
-                                          - Deploy Beta 1 su GitHub.. <br>
-                                          <br>
-                                          <strong>Marco Annicchiarico</strong><br>
-                                          - Metodi piatto Elimina. <br>
-                                          - Metodi Piatto Aggiunta. <br>
-                                          - Studio dei cookies.
+                                          - Implementazione html aggiungi wallet, aggiungi Statement, da rivedere l'aggiunta multipla. <br>
+                                          - Separazione compiti JS, da rivedere meglio. <br>
+                                          - Aggiunta opzione di visualizzazione wallet secondo data. <br>
                                         </div>
                                       </div>
                                     </div>
                                     <div class="accordion-item">
                                       <h2 class="accordion-header" id="heading2">
                                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="true" aria-controls="collapse2">
-                                          13-05-2021 - NotEatYet V0.80 Alpha 3 
+                                          05-06-2021 - MoneyStats V0.30 Alpha 3 
                                         </button>
                                       </h2>
                                       <div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2" data-bs-parent="#accordionExample">
                                         <div class="accordion-body">
                                           <strong class="text-dark fs-3">BackEnd</strong><br>
-                                          <strong>Edoardo Carollo</strong><br>
-                                          - Correzione bug metodi controller ristoranti. <br>
-                                          - Analisi dati get. <br>
-                                          - Sviluppo controller piatti. <br>
-                                          - Correzione bug/errori controller piatti. <br>
-                                          <br>
-                                          <strong>Domenico Tuttolomondo</strong><br>
-                                          - 
+                                          - Aggiunto Controller Statement, ed implementato metodo personalizzato per la data e metodo di aggiunta Statement, per ora solo separato, ricordarsi di inserire piu in avanti un opzione Note. <br>
+                                          - Aggiunti nuovi metodi nella sezione category e wallet, tra cui l'aggiunta del wallet, ricordarsi di inserire Note. <br>
+                                          
                                           <hr>
                                           <strong class="text-dark fs-3">FrontEnd</strong><br>
                                           <strong>Giovanni Lamarmora</strong><br>
-                                          - Per problemi con Jquery ho dovuto disabilitare le pagine di modifica e dettaglio per il momento dei ristoranti, ho utilizzato un modale per entrambi. <br>
-                                          - Bug: Lista dei piatti nel dettaglio ristorante non funzionante. <br>
-                                          - Metodo aggiungi ristorante funzionante correttamente. <br>
-                                          - Metodo modifica ristorante funzionante correttamente. <br>
-                                          - Bug Fix: Metodo Elimina creato da Marco, ora la conferma dell'avvenuta eliminazione funziona correttamente. <br>
-                                          <br>
-                                          <strong>Marco Annicchiarico</strong><br>
-                                          - Metodi ristorante Elimina. <br>
-                                          - Inizio metodi piatto.
+                                          - Implementazione html aggiungi wallet, aggiungi Statement, da rivedere l'aggiunta multipla. <br>
+                                          - Separazione compiti JS, da rivedere meglio. <br>
+                                          - Aggiunta opzione di visualizzazione wallet secondo data. <br>
                                         </div>
                                       </div>
                                     </div>
