Statement.html now working

--- a/src/main/resources/static/capitalewallet.html
+++ b/src/main/resources/static/capitalewallet.html
@@ -60,7 +60,7 @@
                       <div class="row">
                         <div class="col">
                           <h5 class="card-title text-uppercase text-muted mb-0">TOTALE CAPITALI</h5>
-                          <span class="h2 font-weight-bold mb-0">€ 350,897</span>
+                          <span class="h2 font-weight-bold mb-0" id="totale">€ 0.0</span>
                         </div>
                         <div class="col-auto">
                           <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
