Bug fixed, Connected homepage.html

--- a/src/main/resources/static/capitalewallet.html
+++ b/src/main/resources/static/capitalewallet.html
@@ -69,8 +69,29 @@
                         </div>
                       </div>
                       <p class="mt-3 mb-0 text-muted text-sm">
-                        <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
-                        <span class="text-nowrap">Since last month</span>
+                        <span class="performancetot"></span>
+                        <span class="text-nowrap sincetot">Since last month</span>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-xl-3 col-sm-6" style="padding-bottom: 30px;">
+                  <div class="card card-stats mb-4 mb-xl-0">
+                    <div class="card-body">
+                      <div class="row">
+                        <div class="col">
+                          <h5 class="card-title text-uppercase text-muted mb-0">PIL</h5>
+                          <span class="h2 font-weight-bold mb-0" id="pil">£ 0.0</span>
+                        </div>
+                        <div class="col-auto">
+                          <div class="icon icon-shape bg-warning text-white rounded-circle shadow">
+                            <i class="fas fa-poll"></i>
+                          </div>
+                        </div>
+                      </div>
+                      <p class="mt-3 mb-0 text-muted text-sm">
+                        <span class="performancetot"></span>
+                        <span class="text-nowrap sincetot">Since last month</span>
                       </p>
                     </div>
                   </div>
