--- a/src/main/resources/static/homepage.html
+++ b/src/main/resources/static/homepage.html
@@ -9,7 +9,7 @@
     <script src="./js/jquery-3.6.0.min.js"></script>
     <script src="./js/wallet.js"></script>
     <script src="./js/category.js"></script>
-    <script src="./js/homepageplus.js"></script>
+    <script src="./js/homepage.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" />
@@ -89,13 +89,13 @@
           <div class="container-fluid">
             <div class="header-body">
               <div class="row" style="padding-top: 80px;">
-                <div class="col-xl-3 col-lg-6" style="padding-bottom: 30px;">
+                <div class="col-xl-3 col-sm-6" style="padding-bottom: 20px;">
                   <div class="card card-stats mb-4 mb-xl-0">
                     <div class="card-body">
                       <div class="row">
                         <div class="col">
                           <h5 class="card-title text-uppercase text-muted mb-0">Capitale totale</h5>
-                          <span class="h2 font-weight-bold mb-0">€ 350,897</span>
+                          <span class="h2 font-weight-bold mb-0" id="totalecapitale">£ 0.00</span>
                         </div>
                         <div class="col-auto">
                           <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
@@ -104,19 +104,19 @@
                         </div>
                       </div>
                       <p class="mt-3 mb-0 text-muted text-sm">
-                        <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
-                        <span class="text-nowrap">Since last month</span>
+                        <span class="performanceLastStatement"></span>
+                        <span class="text-nowrap sincetotalecapitale">Since last month</span>
                       </p>
                     </div>
                   </div>
                 </div>
-                <div class="col-xl-3 col-lg-6" style="padding-bottom: 30px;">
+                <div class="col-xl-3 col-sm-6" style="padding-bottom: 20px;">
                     <div class="card card-stats mb-4 mb-xl-0">
                       <div class="card-body">
                         <div class="row">
                           <div class="col">
                             <h5 class="card-title text-uppercase text-muted mb-0">PIL Performance</h5>
-                            <span class="h2 font-weight-bold mb-0">49,65%</span>
+                            <span class="performanceFirstDate"></span>
                           </div>
                           <div class="col-auto">
                             <div class="icon icon-shape bg-info text-white rounded-circle shadow">
@@ -125,20 +125,19 @@
                           </div>
                         </div>
                         <p class="mt-3 mb-0 text-muted text-sm">
-                          <span class="text-success mr-2"><i class="fas fa-arrow-up"></i> 12%</span>
                           <span class="text-nowrap">Since beginning</span>
                         </p>
                       </div>
                     </div>
                   </div>
 
-                <div class="col-xl-3 col-lg-6" style="padding-bottom: 30px;">
+                <div class="col-xl-3 col-sm-6" style="padding-bottom: 20px;">
                   <div class="card card-stats mb-4 mb-xl-0">
                     <div class="card-body">
                       <div class="row">
                         <div class="col">
                           <h5 class="card-title text-uppercase text-muted mb-0">PIL</h5>
-                          <span class="h2 font-weight-bold mb-0">€ 2,356</span>
+                          <span class="h2 font-weight-bold mb-0" id="pil">£ 0.00</span>
                         </div>
                         <div class="col-auto">
                           <div class="icon icon-shape bg-warning text-white rounded-circle shadow">
@@ -147,19 +146,19 @@
                         </div>
                       </div>
                       <p class="mt-3 mb-0 text-muted text-sm">
-                        <span class="text-danger mr-2"><i class="fas fa-arrow-down"></i> 3.48%</span>
-                        <span class="text-nowrap">Since last month</span>
+                        <span class="performanceLastStatement"></span>
+                        <span class="text-nowrap sincetotalecapitale">Since last month</span>
                       </p>
                     </div>
                   </div>
                 </div>
-                <div class="col-xl-3 col-lg-6" style="padding-bottom: 30px;">
+                <div class="col-xl-3 col-sm-6" style="padding-bottom: 20px;">
                   <div class="card card-stats mb-4 mb-xl-0">
                     <div class="card-body">
                       <div class="row">
                         <div class="col">
                           <h5 class="card-title text-uppercase text-muted mb-0">PIL totale</h5>
-                          <span class="h2 font-weight-bold mb-0">€ 924</span>
+                          <span class="h2 font-weight-bold mb-0" id="pilTotale">£ 0.00</span>
                         </div>
                         <div class="col-auto">
                           <div class="icon icon-shape bg-yellow text-white rounded-circle shadow">
@@ -168,7 +167,6 @@
                         </div>
                       </div>
                       <p class="mt-3 mb-0 text-muted text-sm">
-                        <span class="text-warning mr-2"><i class="fas fa-arrow-down"></i> 1.10%</span>
                         <span class="text-nowrap">Since beginning</span>
                       </p>
                     </div>
@@ -190,7 +188,7 @@
       <section class="mb-4 col" style="padding-bottom: 100px;">
         <div class="card" style="margin-top: -100px;">
           <div class="card-header py-3">
-            <h5 class="mb-0 text-center"><strong>Andamento Anno 2021</strong></h5>
+            <h5 class="mb-0 text-center"><strong id="year"></strong></h5>
           </div>
           <div class="card-body">
             <canvas id="myChart"></canvas>
@@ -200,7 +198,7 @@
       <section class="mb-4 col" style="padding-bottom: 100px;">
         <div class="card" style="margin-top: -100px;">
           <div class="card-header py-3">
-            <h5 class="mb-0 text-center"><strong>Andamento Anno 2021</strong></h5>
+            <h5 class="mb-0 text-center"><strong id="dataAttuale">Quantita in data</strong></h5>
           </div>
           <div class="card-body">
             <canvas id="chart-pie"></canvas>
@@ -214,30 +212,19 @@
         <div class="card" style="margin-top: -100px;">
           <div class="card-header text-center py-3">
             <h5 class="mb-0 text-center">
-              <strong>Sales Performance KPIs</strong>
+              <strong id="listStatement"></strong>
             </h5>
           </div>
           <div class="card-body">
             <div class="table-responsive">
               <table class="table table-hover text-nowrap">
                 <thead>
-                  <tr>
-                    <th scope="col"></th>
-                    <th scope="col">Product Detail Views</th>
-                    <th scope="col">Unique Purchases</th>
-                    <th scope="col">Quantity</th>
-                    <th scope="col">Product Revenue</th>
-                    <th scope="col">Avg. Price</th>
+                  <tr id="titoloTab">
+                    <th scope="col">Date</th>
                   </tr>
                 </thead>
                 <tbody>
-                  <tr>
-                    <th scope="row">Value</th>
-                    <td>18,492</td>
-                    <td>228</td>
-                    <td>350</td>
-                    <td>$4,787.64</td>
-                    <td>$13.68</td>
+                  <tr id="data">
                   </tr>
                   <tr>
                     <th scope="row">Percentage change</th>
@@ -305,8 +292,6 @@
       <!--Section: Sales Performance KPIs-->
         <!-- MDB -->
         <script type="text/javascript" src="js/mdb.min.js"></script>
-        <!-- Custom scripts -->
-        <script type="text/javascript" src="js/homepage.js"></script>
 
         <!-- MODAL PORTAFOGLI DISPONIBILI -->
         <div class="modal fade" id="wallet" tabindex="-1" aria-labelledby="walletModal" aria-hidden="true">
