--- a/src/main/resources/static/homepage.html
+++ b/src/main/resources/static/homepage.html
@@ -61,8 +61,8 @@
                        </a>   
                        <ul class='dropdown-menu dropdown-menu-lg-end' aria-labelledby='navbarDropdown'>  
                             <li><a class='dropdown-item' data-bs-toggle="modal" data-bs-target="#dataWallet">Capitale nei Wallet</a></li> 
-                            <li><a class='dropdown-item disabled' href='#'>Storico Annuale</a></li>   
-                            <li><a class='dropdown-item disabled' href='#'>Storico Totale</a></li>
+                            <li><a class='dropdown-item' href='storicoanno.html'>Storico Annuale</a></li>   
+                            <li><a class='dropdown-item' href='storico.html'>Storico Totale</a></li>
                             <li><a class='dropdown-item disabled' href='#'>Grafico Annuale</a></li>
                             <li><a class='dropdown-item' data-bs-toggle="modal" data-bs-target="#wallet">Portafogli disponibili</a></li> 
                             <li><a class='dropdown-item' data-bs-toggle="modal" data-bs-target="#category">Categorie disponibili</a></li> 
@@ -73,7 +73,6 @@
                               Opzioni   
                         </a>   
                         <ul class='dropdown-menu dropdown-menu-lg-end' aria-labelledby='navbarDropdown'> 
-                          <li><a class='dropdown-item' aria-current='page' href='statement(disabled).html'>Aggiungi Statement(Disabled)</a></li>
                             <li><a class='dropdown-item disabled' href='#'>Gestione Account</a></li>    
                              <li><a class='dropdown-item' href='changelog.html'>Changelog</a></li>   
                              <li><a class='dropdown-item' href='/logout'>Logout</a></li>  
@@ -223,65 +222,8 @@
                     <th scope="col">Date</th>
                   </tr>
                 </thead>
-                <tbody>
-                  <tr id="data">
-                  </tr>
-                  <tr>
-                    <th scope="row">Percentage change</th>
-                    <td>
-                      <span class="text-danger">
-                        <i class="fas fa-caret-down me-1"></i><span>-48.8%%</span>
-                      </span>
-                    </td>
-                    <td>
-                      <span class="text-success">
-                        <i class="fas fa-caret-up me-1"></i><span>14.0%</span>
-                      </span>
-                    </td>
-                    <td>
-                      <span class="text-success">
-                        <i class="fas fa-caret-up me-1"></i><span>46.4%</span>
-                      </span>
-                    </td>
-                    <td>
-                      <span class="text-success">
-                        <i class="fas fa-caret-up me-1"></i><span>29.6%</span>
-                      </span>
-                    </td>
-                    <td>
-                      <span class="text-danger">
-                        <i class="fas fa-caret-down me-1"></i><span>-11.5%</span>
-                      </span>
-                    </td>
-                  </tr>
-                  <tr>
-                    <th scope="row">Absolute change</th>
-                    <td>
-                      <span class="text-danger">
-                        <i class="fas fa-caret-down me-1"></i><span>-17,654</span>
-                      </span>
-                    </td>
-                    <td>
-                      <span class="text-success">
-                        <i class="fas fa-caret-up me-1"></i><span>28</span>
-                      </span>
-                    </td>
-                    <td>
-                      <span class="text-success">
-                        <i class="fas fa-caret-up me-1"></i><span>111</span>
-                      </span>
-                    </td>
-                    <td>
-                      <span class="text-success">
-                        <i class="fas fa-caret-up me-1"></i><span>$1,092.72</span>
-                      </span>
-                    </td>
-                    <td>
-                      <span class="text-danger">
-                        <i class="fas fa-caret-down me-1"></i><span>$-1.78</span>
-                      </span>
-                    </td>
-                  </tr>
+                <tbody id="data">
+
                 </tbody>
               </table>
             </div>
