--- a/src/main/resources/static/homepage.html
+++ b/src/main/resources/static/homepage.html
@@ -34,18 +34,15 @@
    <script src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js' integrity='sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf' crossorigin='anonymous'></script>
     <title>MoneyStats - Homepage</title>
 </head>
-<body class="loginpage">
+<body class="homepage">
     <nav class='navbar navbar-expand-lg navbar-dark colorLogo fixed-top'>   
         <div class='container-fluid'>   
-            <a href="homepage.html"><figure class="hover-rotate"><img src='./logos/logo_transparent.png' alt='block' style='padding-left: 5px; width: 200px;'></figure></a>   
+            <a href="homepage.html" class="resetCookies"><figure class="hover-rotate"><img src='./logos/logo_transparent.png' alt='block' style='padding-left: 5px; width: 200px;'></figure></a>   
             <button class='navbar-toggler' type='button' data-bs-toggle='collapse' data-bs-target='#navbarSupportedContent' aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation'>   
             <span class='navbar-toggler-icon'></span>   
             </button>   
                 <div class='collapse navbar-collapse' id='navbarSupportedContent'>   
-                   <ul class='navbar-nav ms-auto mb-2 mb-lg-0'>   
-                     <li class='nav-item'>   
-                       <a class='nav-link active' aria-current='page' href='homepage.html'>Home</a>   
-                     </li> 
+                   <ul class='navbar-nav ms-auto mb-2 mb-lg-0'>
                      <li class='nav-item dropdown'>   
                         <a class='nav-link dropdown-toggle' href='#' id='navbarDropdown' role='button' data-bs-toggle='dropdown' aria-expanded='false'>   
                               Operazioni 
