--- a/src/main/resources/static/statement.html
+++ b/src/main/resources/static/statement.html
@@ -24,49 +24,28 @@
    <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6' crossorigin='anonymous'>
    <!-- JavaScript Bundle with Popper -->
    <script src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js' integrity='sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf' crossorigin='anonymous'></script>
-    <title>Aggiunta Statement</title>
+    <title>MoneyStats - Aggiunta Statement</title>
 </head>
-<body class="loginpage">
+<body class="statement">
     <nav class='navbar navbar-expand-lg navbar-dark colorLogo fixed-top'>   
         <div class='container-fluid'>   
-            <a href="homepage.html"><figure class="hover-rotate"><img src='./logos/logo_transparent.png' alt='block' style='padding-left: 5px; width: 200px;'></figure></a>   
+            <a href="homepage.html" class="resetCookies"><figure class="hover-rotate"><img src='./logos/logo_transparent.png' alt='block' style='padding-left: 5px; width: 200px;'></figure></a>   
             <button class='navbar-toggler' type='button' data-bs-toggle='collapse' data-bs-target='#navbarSupportedContent' aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation'>   
             <span class='navbar-toggler-icon'></span>   
             </button>   
                 <div class='collapse navbar-collapse' id='navbarSupportedContent'>   
                    <ul class='navbar-nav ms-auto mb-2 mb-lg-0'>   
                      <li class='nav-item'>   
-                       <a class='nav-link active' aria-current='page' href='homepage.html'>Home</a>   
-                     </li> 
-                     <li class='nav-item dropdown'>   
-                        <a class='nav-link dropdown-toggle' href='#' id='navbarDropdown' role='button' data-bs-toggle='dropdown' aria-expanded='false'>   
-                              Operazioni 
-                        </a>   
-                        <ul class='dropdown-menu dropdown-menu-lg-end' aria-labelledby='navbarDropdown'>   
-                               <li><a class='dropdown-item disabled' aria-current='page' href='#'>Aggiungi Statement</a></li>
-                            <li><a class='dropdown-item disabled' aria-current='page' href='#'>Aggiungi Portafoglio</a></li>
-                        </ul> 
-                     </li>   
-                     <li class='nav-item dropdown'>   
-                       <a class='nav-link dropdown-toggle' href='#' id='navbarDropdown' role='button' data-bs-toggle='dropdown' aria-expanded='false'>   
-                             Opzioni Conti   
-                       </a>   
-                       <ul class='dropdown-menu dropdown-menu-lg-end' aria-labelledby='navbarDropdown'>   
-                            <li><a class='dropdown-item disabled' href='#'>Storico Annuale</a></li>   
-                            <li><a class='dropdown-item disabled' href='#'>Storico Totale</a></li>
-                            <li><a class='dropdown-item disabled' href='#'>Grafico Annuale</a></li>
-                            <li><a class='dropdown-item' data-bs-toggle="modal" data-bs-target="#wallet">Portafogli disponibili</a></li> 
-                            <li><a class='dropdown-item' data-bs-toggle="modal" data-bs-target="#category">Categorie disponibili</a></li> 
-                        </ul>   
-                    </li> 
+                      <a class='nav-link active resetCookies' aria-current='page' href='javascript:history.back()'>Indietro</a>   
+                    </li>
                     <li class='nav-item dropdown'>   
                         <a class='nav-link dropdown-toggle' href='#' id='navbarDropdown' role='button' data-bs-toggle='dropdown' aria-expanded='false'>   
                               Opzioni   
                         </a>   
                         <ul class='dropdown-menu dropdown-menu-lg-end' aria-labelledby='navbarDropdown'> 
-                            <li><a class='dropdown-item disabled' href='#'>Gestione Account</a></li>    
-                             <li><a class='dropdown-item' href='changelog.html'>Changelog</a></li>   
-                             <li><a class='dropdown-item' href='/logout'>Logout</a></li>  
+                            <li><a class='dropdown-item disabled resetCookies' href='#'>Gestione Account</a></li>    
+                             <li><a class='dropdown-item resetCookies' href='changelog.html'>Changelog</a></li>   
+                             <li><a class='dropdown-item resetCookies' href='/logout'>Logout</a></li>  
                          </ul>   
                      </li> 
                 </ul> 
