--- a/src/main/resources/static/homepage.html
+++ b/src/main/resources/static/homepage.html
@@ -335,5 +335,34 @@
                 </div>
               </div>
             </div>
+
+            <!-- MODAL MODIFICA PORTAFOGLIO -->
+      <div class="modal fade" id="editWallet" tabindex="-1" aria-labelledby="walletModalEdit" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content opacity" style="border-radius: 20px;">
+              <div class="modal-header">
+                      <img src="./logos/favicon_trasparent.png" alt="block" style="width: 50px; border-radius: 100px; padding-right: 10px;">
+                  <h5 class="modal-title" id="walletModalEdit">MoneyStats Modifica Portafoglio</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <div class='mb-3'>  
+                  <div class='form-floating mb-3'> 
+                      <input type='text' id="nameEdit" name='nameEdit' class='form-control roundedCorner mx-auto' placeholder="Inserire Nome Portafoglio..." required>
+                      <label for='nameEdit'>Modifica Nome Portafoglio</label>
+                  </div>
+              </div> 
+              <div class="mb-3">
+                  <select class="form-select roundedCorner" id="catOptionhtml2" aria-label="Default select example">
+                    </select>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary roundedCorner" data-bs-dismiss="modal" style="height: 45px; width: 100px;">Chiudi</button>
+              <button type="button" class="btn btn-outline-success roundedCorner" style="height: 45px; width: 120px;" id="editWalletbtn">Conferma</button>  
+              </div>
+          </div>
+        </div>
+      </div>
     </body>
     </html>
